--- a/index.html
+++ b/index.html
@@ -7,24 +7,36 @@
 	  <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-    	<img class="html" src="img/HTML.png" alt="HTML">
-    	 <nav class="nav1">	
-    	<ul >
-    		<li class="list">
-    			<a href="#">HOME</a>
-    		</li>
-    		<li class="list">
-    			<a href="#">NEWS</a>
-    		</li>
-    		<li class="list">
-    			<a href="#">ABOUT</a>
-    		</li>
-    		<li class="list">
-    			<a href="#">CONTACT</a>
+    <header class="block">
+
+      <nav class="html">	
+    	  <img class="html." src="img/HTML.png" alt="HTML">
+    	  <div class="clear"></div>
+      </nav>	
+
+      <nav class="nav1">	
+    	 <ul >
+
+    		 <li class="list">
+    			 <a href="#">HOME</a>
+    		 </li>
+
+    		 <li class="list">
+    			 <a href="#">NEWS</a>
+    		 </li>
+
+    		 <li class="list">
+    			 <a href="#">ABOUT</a>
+    		 </li>
+
+    		 <li class="list">
+    			 <a href="#">CONTACT</a>
     			
-    		</li>
-    	</ul>
-    </nav>
-    
+    		 </li>
+
+    	 </ul>
+    	 <div class="clear"></div>
+      </nav>
+    </header>
     </body>
 </html>
