--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	  <link rel="stylesheet" type="text/css" href="css/reset.css"	>
 	  <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
-    <body>
+    <body class="body">
     <header class="header">
 
       <nav class="html">	
@@ -115,6 +115,9 @@
     		      <p class="article">approach that suggests that design and development should respond to the user's behavior and environment based on screen size, platform and orientation. </p>
             	  <div class="clear"></div>
     	    </div>
+    	    <div class="readm">
+    	    	<p>read more</p>
+    	    </div>
     	</div>
     	<div class="right-block">
     	     <div>
@@ -129,10 +132,14 @@
     		       <p class="article ">Mobile application development is the process of making or creating a mobile application to run on various mobile platforms. A mobile platform is a mobile operating system.</p>
     		       <div class="clear"></div>
     	     </div>
+    	     <div class="readm">
+    	    	<p>read more</p>
+    	    </div>
 
     	</div>
     <div class="clear"></div>
     </section>
+    <footer class="foot">©2017 hyper text murkup language</footer>
     
     </body>
 </html>
